# SDL2-android-emvalac

./: .gitattributes  .gitignore  AndroidManifest.xml  CMakeLists.txt  Cakefile  README.md  android.sh  build.1.sh  build.sh  buildz  component.1.json  component.json  desktop.sh  emscripten.sh  gdb.exe.stackdump  gir2dts.json  gulpfile.js  index.js  init.sh  main  meson.build  meson_options.txt  nine.md  package-lock.json  package.json  readme.md  shmupwarz.avprj  shmupwarz.data  shmupwarz.js  shmupwarz.tpproj  shmupwarz.wasm  symlinks.bat  symlinks.sh  tsconfig.1.json  tsconfig.json  vala.sh  valac.sh
.dark/lib/entitas/: manifest.json
.dark/lib/goop/: manifest.json
.dark/lib/lua/: manifest.json
.dark/lib/mt19937/: manifest.json
.dark/lib/sdl2/: manifest.json
.dark/lib/sdx/: manifest.json
.dark/platform/: manifest.json
android/: AndroidManifest.xml  build.xml
android/assets/assets/: pack.atlas
android/jni/: SDL2
android/jni/src/: Android.mk  Factory.c  Game.c  components.c  entity.c  main.c  main.orog.c  shmupwarz.c
android/jni/src/entitas/: Cache.c  Group.c  Matcher.c  World.c  entitas.c
android/jni/src/sdx/: Color.c  Font.c  exceptions.c  sdx.c
android/jni/src/systems/: AnimationSystem.c  CollisionSystem.c  DisplaySystem.c  ExpireSystem.c  InputSystem.c  PhysicsSystem.c  RemoveSystem.c  ScoreSystem.c  SpawnSystem.c
android/jni/src/util/: File.c
android/res/values/: strings.xml
assets/: assets.atlas  frodo.txt  hud.json
buildzz/: adriac.json  shmupwarz
buildzz/assets/: normal.json
buildzz/src/: CMakeLists.txt  Factory.c  Factory.vala  Game.c  Game.vala  SdxWrapper.gs  components.c  entity.c  main.c  mt19937ar.c  shmupwarz.c
buildzz/src/entitas/: Group.c  Group.vala  Matcher.c  Matcher.vala  World.c  World.vala  entitas.c  entitas.vala
buildzz/src/entitas/events/: ComponentReplaced.c  ComponentReplaced.vala  EntityChanged.c  EntityChanged.vala  EntityReleased.c  EntityReleased.vala  GroupChanged.c  GroupChanged.vala  GroupUpdated.c  GroupUpdated.vala  GroupsChanged.c  GroupsChanged.vala  WorldChanged.c  WorldChanged.vala
buildzz/src/goop/: Class.c  Class.vala  Guid.c
buildzz/src/sdx/: AbstractGame.c  AbstractGame.vala  ApplicationListener.c  Color.c  Files.c  Files.vala  Font.c  Font.vala  InputMultiplexer.c  InputMultiplexer.vala  InputProcessor.c  InputProcessor.vala  Screen.c  exceptions.c  sdx.c
buildzz/src/sdx/audio/: Sound.c  Sound.vala  audio.c
buildzz/src/sdx/files/: FileHandle.c  FileHandle.vala  files.c
buildzz/src/sdx/graphics/: BitmapFont.c  BitmapFont.vala  Camera.c  Camera.vala  NinePatch.c  NinePatch.vala  Sprite.c  Sprite.vala  Surface.c  Surface.vala  TextureAtlas.c  TextureAtlas.vala  TextureEnums.c  TextureRegion.c  TextureRegion.vala  graphics.c
buildzz/src/sdx/math/: Interpolation.c  Interpolation.vala  Timeline.c  Timeline.vala  Tween.c  Tween.vala  TweenAccessor.c  TweenAccessor.vala  TweenManager.c  TweenManager.vala  Tweenbase.c  Tweenbase.vala  Vector2.c
buildzz/src/sdx/ui/: Button.c  Component.c  Label.c  (+2 more)
buildzz/src/systems/: AnimationSystem.c  AnimationSystem.vala  CollisionSystem.c  CollisionSystem.vala  DisplaySystem.c  DisplaySystem.vala  ExpireSystem.c  ExpireSystem.vala  InputSystem.c  InputSystem.vala  PhysicsSystem.c  PhysicsSystem.vala  RemoveSystem.c  RemoveSystem.vala  ScoreSystem.c  ScoreSystem.vala  SoundSystem.c  SoundSystem.vala  SpawnSystem.c  SpawnSystem.vala
data/: CMakeLists.txt  resources.gresource.xml
jni/src/: Android.mk  Sprite.c  components.c  main.c  main_save.c
jni/src/entitas/: entitas.c
jni/src/sdx/: sdx.c
jni/src/systems/: AnimationSystem.c  PhysicsSystem.c
liquid/: vala.components.liquid  vala.systems.liquid
po/: CMakeLists.txt  POTFILES.in
share/game/: index.js
share/game/lib/: sdx.coffee  sdx.js
src/: CMakeLists.txt  Factory.1.vala  Factory.vala  Game.vala  SdxWrapper.c  SdxWrapper.gs  components.gs  components.vala  entity.gs  entity.vala  entity.vala.txt  main.1.vala  main.vala  shmupwarz.vala
src/entitas/: Cache.vala  Group.vala  Matcher.vala  World.vala  entitas.vala
src/entitas/events/: ComponentReplaced.vala  EntityChanged.vala  EntityReleased.vala  GroupChanged.vala  GroupUpdated.vala  GroupsChanged.vala  WorldChanged.vala
src/js/: main.ts  prolog.js  sdx.d.ts
src/sdx/: Color.gs  Files.vala  Font.vala  exceptions.gs  sdx.vala
src/sdx/audio/: Sound.vala  audio.vala
src/sdx/files/: FileHandle.vala  files.vala
src/sdx/graphics/: BitmapFont.vala  Camera.vala  NinePatch.vala  Sprite.vala  Surface.vala  Texture.vala  TextureAtlas.1.vala  TextureAtlas.vala  TextureEnums.vala  TextureRegion.vala  graphics.vala
src/sdx/math/: AABB.vala  Vector2.vala
src/sdx/ui/: Button.vala  Component.vala
src/sdx/utils/: Cache.vala  File.vala  Json.vala  StringTokenizer.vala  utils.vala
src/systems/: AnimationSystem.vala  CollisionSystem.vala  DisplaySystem.vala  ExpireSystem.vala  InputSystem.vala  PhysicsSystem.vala  RemoveSystem.vala  ScoreSystem.vala  SoundSystem.vala  SpawnSystem.vala
src/util/: File.vala
src/vapis/: glib-2.0.vapi  sdl2.vapi
vala/: build.sh  build_save.sh  demo
vala/src/: Factory.vala  Sprite.vala  main.vala
vala/src/util/: File.vala
vala/src/vapis/: android.vapi
web/: index.html  package.json
(+24 files in other folders)
